--- a/app/src/main/res/navigation/movie_graph.xml
+++ b/app/src/main/res/navigation/movie_graph.xml
@@ -3,11 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/movie_graph"
+    android:label="movieGraph"
     app:startDestination="@id/MovieFragment">
 
     <fragment
         android:id="@+id/MovieFragment"
-        android:name="com.lucao.theawesomemovieapp.MovieFragment"
+        android:name="com.lucao.theawesomemovieapp.ui.fragment.MovieFragment"
         android:label="fragment_movie_list"
         tools:layout="@layout/fragment_movie_list">
         <action
@@ -17,7 +18,7 @@
 
     <fragment
         android:id="@+id/MovieDetailFragment"
-        android:name="com.lucao.theawesomemovieapp.MovieDetailsFragment"
+        android:name="com.lucao.theawesomemovieapp.ui.fragment.MovieDetailsFragment"
         android:label="fragment_movie_detail"
         tools:layout="@layout/fragment_movie_details" />
 </navigation>
